# gliomapredict

./: README.md  pyproject.toml
configs/: baseline_v1.yaml  cnn_v1_1.yaml  cohort_v1.yaml  logistic_robustness_v1.yaml  preprocessing_v1.yaml  radiomics_v1.yaml  splits_v1.yaml
data/processed/: final_metrics.csv
src/glioma_idh/: __init__.py  analyze_logistic_robustness_v1.py  audit.py  cli.py  create_splits_v1.py  discovery.py  extract_radiomics_v1.py  freeze_v1.py  manifest.py  materialize_cnn_inputs_v1.py  materialize_preproc_index.py  materialize_radiomics_inputs.py  run_baseline_v1.py  run_cnn_v1_1.py
tests/: test_analyze_logistic_robustness_v1.py  test_discovery.py  test_freeze_v1.py  test_materialize_cnn_inputs_v1.py  test_materialize_preproc_index.py  test_materialize_radiomics_inputs.py  test_run_baseline_v1.py  test_run_cnn_v1_1.py
